# loadout

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  RESOURCES.md  TODO.md  package.json  project-words.txt  pyproject.toml  setup.sh  unicorn-macOS-setup.md
.github/workflows/: build-loadout.yml
conf/: kevops.omp.jsonc  vs-code-settings.jsonc
loadout/: cli.py
modules/: aliases.sh  apps.sh  common.sh  dotnet.sh  dracula.sh  go.sh  nodeJS.sh  python.sh  ruby.sh  system.sh  tty.sh  vscode.sh
scripts/: run-mypy.sh
tests/: test_loadout.py
