[tool.poetry]
name = "loadout"
version = "0.1.0"
description = "Loadout makes developer machine setup painless & deterministic."
authors = ["Kevin McCartney <hello@kevinmccartney.is>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.4"}
pytest = "^7.1.3"
debugpy = "^1.6.3"
mypy = "^0.982"
isort = "^5.10.1"
pylint = "^2.15.3"
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
pytest-mock = "^3.10.0"
coverage = "^6.5.0"

[tool.black]
target-version = ["py39"]
include = '\.pyi?$'

[tool.bandit.assert_used]
skips = ['tests/*.py', '*test_*.py']

[tool.mypy]
mypy_path="./loadout:./tests"
strict_optional = true
show_error_context = true
show_error_codes = true
show_column_numbers = true
strict = true
pretty = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "debugpy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_mock"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
